--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     background-size: cover;
     color: white;
     text-align: center;
-    width: 80%;
+    max-width: 80%;
     margin: auto;
 }
 .logo{
@@ -13,7 +13,7 @@
 }
 .content{
     padding: 150px;
-    width: 300px;
+    max-width: 300px;
     margin: auto;
 }
 .title{
@@ -28,10 +28,11 @@
     font-family: comfortaa;
 }
 @media screen and (max-width: 600px) {
+    .container{
+        padding: 0 1em;
+    }
     .content{
         padding: 150px 0px;
-        width: 300px;
-        margin: auto;
     }
     .title{
         font-size: 25px;
