--- a/style.css
+++ b/style.css
@@ -15,14 +15,15 @@
 .content{
     padding: 150px;
     max-width: 18.75rem;
+    height: auto;
     margin: auto;
 }
 .title{
-    font-size: 50px;
+    font-size: 3.125rem;
     font-weight: bold;
     font-family: comfortaa;
-    line-height: 0;
-    margin: 0;
+    margin: auto;
+    padding: auto;
 }
 .title-p{
     font-size: 25px;
