--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     color: white;
     text-align: center;
     max-width: 80%;
+    max-height: 900px;
     margin: auto;
 }
 .logo{
@@ -13,28 +14,28 @@
     max-width: 100%;
 }
 .content{
-    padding: 150px;
-    max-width: 18.75rem;
-    height: auto;
+    padding: 100px 0;
+    max-width: 364px;
+    max-height: auto;
     margin: auto;
+    padding: auto;
 }
 .title{
     font-size: 3.125rem;
     font-weight: bold;
     font-family: comfortaa;
-    margin: auto;
-    padding: auto;
 }
 .title-p{
     font-size: 25px;
     font-family: comfortaa;
+    text-transform: uppercase;
 }
 @media screen and (max-width: 600px) {
     .container{
         padding: 0 1em;
     }
     .content{
-        padding: 150px 0px;
+        padding: 100px 0px;
     }
     .title{
         font-size: 25px;
